--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 <a href="mailto:ratuleee21@gmail.com" target="_blank"><i class="fas fa-envelope"></i> ratuleee21@gmail.com</a>
                 <a href="tel:+8801701140388" target="_blank"><i class="fas fa-phone"></i> +880 1701 140388</a>
                 <a href="https://www.linkedin.com/in/ratul-kumar-ghosh-144096232/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                <a href="https://github.com" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                <a href="https://github.com/ratuleee" target="_blank"><i class="fab fa-github"></i> GitHub</a>
             </div>
         </div>
         <div class="footer-bottom">
